# solinpy

./: .coveragerc  .gitignore  LICENSE  README.md  mkdocs.yml  my-wallet.json  pyproject.toml  requirements.txt  run_test.py  tests_individual_report.md  tests_structured_report.md
.github/workflows/: ci.yml
docs/: authors.md  installation.md  quickstart.md
docs/api/: client.md  transactions.md  wallet.md
docs/examples/: token_transfer.md
solinpy/: conftest.py
solinpy/client/: README.md  client.md  client.py  entities.py  execptions.py  rpc_mock.py  test_client.py
solinpy/tests/: devnet_integration_report.md  test_account_decoder.py  test_airdrop.py  test_coverage_boost.py  test_devnet_integration.py  test_token.py  test_token_import.py  test_wallet.py  teste.md
solinpy/transaction/: token.py
solinpy/utils/: CLIENT.md  __init__.py  account_decoder.py  airdrop.py
solinpy/utils/docs/: RESUMO_AIRDROP.md
solinpy/wallet/: manager.py  mnemonic.py  wallet.md
solpy/transaction/: confirmation.py  transaction.py  transfer.py
solpy/utils/: address.py  convert.py
wallet/: manager.py
