[project]
name = "solinpy"
version = "0.1.3"
description = "High-performance Python SDK for Solana"
authors = [{ name = "Equipe Carcaras" }]
requires-python = ">=3.10"
dependencies = [
    "solders>=0.27.1",
    "solana>=0.36.0",
    "mnemonic>=0.21",
    "requests>=2.31.0"
]

[tool.setuptools]
packages = { find = { include = ["solinpy*"] } }

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "solders.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mnemonic.*"
ignore_missing_imports = true
