[project]
name = "solinpy"
version = "0.1.7"
description = "Python SDK for Solana"
authors = [{ name = "SolPy Team" }]
requires-python = ">=3.10"
dependencies = [
    "solders>=0.27.1",
    "solana>=0.36.11",
    "spl",
    "mnemonic>=0.21",
    "requests>=2.31.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
markers = [
	"integration: marks tests that perform real network calls",
]
